--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -49,12 +49,14 @@
 					flattenTo = 4500.25
 					innerRadius = 200
 					outerRadius = 1000
+					SigmaDimensions = 1
 				}
 				@FlattenArea,1
 				{
 					flattenTo = 4000.25
 					innerRadius = 200
 					outerRadius = 1000
+					SigmaDimensions = 1
 				}
 				VoronoiCraters {}
 				VoronoiCraters {}
@@ -62,11 +64,13 @@
 				{
 					deformation = 500
 					jitterHeight = 3
+					SigmaDimensions = 1
 				}
 				@VoronoiCraters,1
 				{
 					deformation = 200
 					jitterHeight = 2
+					SigmaDimensions = 1
 				}
 			}
 		}
