--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -54,14 +54,6 @@
 				}
 				MapDecalTangent {}
 				MapDecalTangent {}
-				@MapDecalTangent,0
-				{
-					absoluteOffset = 0
-					heightMapDeformity = 70
-					radius = 7500
-					smoothHeight = 0
-					SigmaDimensions = 1
-				}
 				@MapDecalTangent,1
 				{
 					absoluteOffset = -85
@@ -86,6 +78,35 @@
 					SigmaDimensions = 1
 				}
 			}
+		}
+	}
+	@Body[Kerbin]
+	{
+		%SpaceCenter
+		{
+			repositionRadiusOffset = 42.7
+			%repositionRadiusOffsetTEMP = #$repositionRadiusOffset$
+			!repositionRadiusOffset,* = DEL
+			repositionRadiusOffset = #$repositionRadiusOffsetTEMP$
+			!repositionRadiusOffsetTEMP = DEL
+			
+			heightMapDeformity = 70
+			%heightMapDeformityTEMP = #$heightMapDeformity$
+			!heightMapDeformity,* = DEL
+			heightMapDeformity = #$heightMapDeformityTEMP$
+			!heightMapDeformityTEMP = DEL
+			
+			absoluteOffset = 0
+			%absoluteOffsetTEMP = #$absoluteOffset$
+			!absoluteOffset,* = DEL
+			absoluteOffset = #$absoluteOffsetTEMP$
+			!absoluteOffsetTEMP = DEL
+			
+			radius = 7500
+			%radiusTEMP = #$radius$
+			!radius,* = DEL
+			radius = #$radiusTEMP$
+			!radiusTEMP = DEL
 		}
 	}
 }
