--- a/GameData/Sigma/Dimensions/Configs/ReDimension/stockPQScities.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/stockPQScities.cfg
@@ -1,74 +1,20 @@
 @Kopernicus:AFTER[SigDim]
 {
-	// Kerbin
-	
-	@Body[Kerbin]
-	{
-		// KSC
-		%SpaceCenter
-		{
-			repositionRadiusOffset = 42.7
-			%repositionRadiusOffsetTEMP = #$repositionRadiusOffset$
-			!repositionRadiusOffset,* = DEL
-			repositionRadiusOffset = #$repositionRadiusOffsetTEMP$
-			!repositionRadiusOffsetTEMP = DEL
-			
-			heightMapDeformity = 70
-			%heightMapDeformityTEMP = #$heightMapDeformity$
-			!heightMapDeformity,* = DEL
-			heightMapDeformity = #$heightMapDeformityTEMP$
-			!heightMapDeformityTEMP = DEL
-			
-			absoluteOffset = 0
-			%absoluteOffsetTEMP = #$absoluteOffset$
-			!absoluteOffset,* = DEL
-			absoluteOffset = #$absoluteOffsetTEMP$
-			!absoluteOffsetTEMP = DEL
-			
-			radius = 7500
-			%radiusTEMP = #$radius$
-			!radius,* = DEL
-			radius = #$radiusTEMP$
-			!radiusTEMP = DEL
-		}
-	}
 	@Body[Mun]
 	{
 		@PQS
 		{
 			@Mods
 			{
-				@FlattenArea,1
-				{
-					%easterEgg = 2
-				}
-				@FlattenArea,0
-				{
-					%easterEgg = 1
-				}
-				
 				// Monolith #2
-				@FlattenArea:HAS[#easterEgg[1]]
+				@FlattenArea
 				{
-					%easterEgg = 189
-					@easterEgg -= 13.69
+					%easterEgg = -189
+					@easterEgg += 12.13
 					%resizeEgg = 1
-					@resizeEgg -= #$SigmaDimensions/Resize$
+					@resizeEgg -= #$@SigmaDimensions/Resize$
 					@resizeEgg *= #$easterEgg$
-					@flattenTo -= #$resizeEgg$
-					!easterEgg = DEL
-					!resizeEgg = DEL
-				}
-				
-				// Monolith #1
-				@FlattenArea:HAS[#easterEgg[2]]
-				{
-					%easterEgg = xxx
-					@easterEgg -= 13.69
-					%resizeEgg = 1
-					@resizeEgg -= #$SigmaDimensions/Resize$
-					@resizeEgg *= #$easterEgg$
-					@flattenTo -= #$resizeEgg$
+					@flattenTo += #$resizeEgg$
 					!easterEgg = DEL
 					!resizeEgg = DEL
 				}
