--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -20,6 +20,14 @@
 		{
 			@semiMajorAxis *= #$@SigmaDimensions/Rescale$
 		}
+		@Rings
+		{
+			@Ring
+			{
+				@outerRadius *= #$@SigmaDimensions/Resize$
+				@innerRadius *= #$@SigmaDimensions/Resize$
+			}
+		}
 		@SpaceCenter
 		{
 			%Resize = #$@SigmaDimensions/Resize$
