--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -49,6 +49,7 @@
 					flattenTo = 4500.25
 					innerRadius = 200
 					outerRadius = 1000
+					position = -6140,-200500,26747
 					SigmaDimensions = 1
 				}
 				@FlattenArea,1
@@ -56,6 +57,7 @@
 					flattenTo = 4000.25
 					innerRadius = 200
 					outerRadius = 1000
+					position = 106480,170340,17136
 					SigmaDimensions = 1
 				}
 				VoronoiCraters {}
