--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -61,6 +61,16 @@
 					@flattenTo *= #$@SigmaDimensions/Resize$
 					@innerRadius *= #$@SigmaDimensions/Resize$
 					@outerRadius *= #$@SigmaDimensions/Resize$
+					%vectorX = #$position[0]$
+					@vectorX *= #$@SigmaDimensions/Resize$
+					%vectorY = #$position[1]$
+					@vectorY *= #$@SigmaDimensions/Resize$
+					%vectorZ = #$position[2]$
+					@vectorZ *= #$@SigmaDimensions/Resize$
+					@position = #$vectorX$,$vectorY$,$vectorZ$
+					!vectorX = DEL
+					!vectorY = DEL
+					!vectorZ = DEL
 				}				
 				@VertexSimplexHeightMap,*
 				{
