--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -61,6 +61,9 @@
 					@flattenTo *= #$@SigmaDimensions/Resize$
 					@innerRadius *= #$@SigmaDimensions/Resize$
 					@outerRadius *= #$@SigmaDimensions/Resize$
+				}
+				@FlattenArea:HAS[#position[*]]
+				{
 					%vectorX = #$position[0]$
 					@vectorX *= #$@SigmaDimensions/Resize$
 					%vectorY = #$position[1]$
@@ -97,6 +100,19 @@
 					@radius *= #$@SigmaDimensions/Resize$
 					@smoothHeight *= #$@SigmaDimensions/Resize$
 				}
+				@MapDecalTangent:HAS[#position[*]]
+				{
+					%vectorX = #$position[0]$
+					@vectorX *= #$@SigmaDimensions/Resize$
+					%vectorY = #$position[1]$
+					@vectorY *= #$@SigmaDimensions/Resize$
+					%vectorZ = #$position[2]$
+					@vectorZ *= #$@SigmaDimensions/Resize$
+					@position = #$vectorX$,$vectorY$,$vectorZ$
+					!vectorX = DEL
+					!vectorY = DEL
+					!vectorZ = DEL
+				}	
 				@MapDecal,*
 				{
 					@absoluteOffset *= #$@SigmaDimensions/Resize$
@@ -104,6 +120,19 @@
 					@radius *= #$@SigmaDimensions/Resize$
 					@smoothHeight *= #$@SigmaDimensions/Resize$
 				}
+				@MapDecal:HAS[#position[*]]
+				{
+					%vectorX = #$position[0]$
+					@vectorX *= #$@SigmaDimensions/Resize$
+					%vectorY = #$position[1]$
+					@vectorY *= #$@SigmaDimensions/Resize$
+					%vectorZ = #$position[2]$
+					@vectorZ *= #$@SigmaDimensions/Resize$
+					@position = #$vectorX$,$vectorY$,$vectorZ$
+					!vectorX = DEL
+					!vectorY = DEL
+					!vectorZ = DEL
+				}	
 			}
 		}
 	}
