--- a/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
@@ -24,6 +24,7 @@
 					flattenTo = 2200
 					innerRadius = 4000
 					outerRadius = 15000
+					position = -19468.5,5737.089,61828.13
 					SigmaDimensions = 1
 				}
 				@FlattenArea,1
@@ -31,6 +32,7 @@
 					flattenTo = 900
 					innerRadius = 15000
 					outerRadius = 35000
+					position = 2000,5737.089,61828.13
 					SigmaDimensions = 1
 				}
 				%VertexSimplexHeightAbsolute
@@ -58,12 +60,14 @@
 				@MapDecal,0
 				{
 					heightMapDeformity = 10
+					position = -19468.5,5737.089,61828.13
 					radius = 60000
 					SigmaDimensions = 1
 				}
 				@MapDecal,1
 				{
 					heightMapDeformity = 10
+					position = 2000,5737.089,61828.13
 					radius = 20000
 					SigmaDimensions = 1
 				}
