--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -67,6 +67,7 @@
 				{
 					absoluteOffset = 0
 					heightMapDeformity = 100
+					position = -123617.5,-294525.7,-42850.8
 					radius = 400
 				}
 			}
