--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -66,6 +66,7 @@
 				{
 					absoluteOffset = 400
 					heightMapDeformity = 100
+					position = -468960,211164.7,-310261
 					radius = 2000
 					smoothHeight = 0.1
 					SigmaDimensions = 1
@@ -75,6 +76,7 @@
 					flattenTo = 1300
 					innerRadius = 400
 					outerRadius = 1000
+					position = -468635.1,-68111.1,-370297.1
 					SigmaDimensions = 1
 				}
 			}
