MapDecal and position

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
@@ -49,6 +49,11 @@
 					vHeightMax = 10000
 					SigmaDimensions = 1
 				}
+				%MapDecal
+				{
+					heightMapDeformity = 50
+					position = 569917.4,-94669.8,181300.9
+				}
 			}
 		}
 	}
