KSC fix + SunAU fix

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -54,10 +54,18 @@
 				}
 				MapDecalTangent {}
 				MapDecalTangent {}
+				@MapDecalTangent,0
+				{
+					heightMapDeformity = 70
+					position = 157000,-3000,-570000
+					radius = 7500
+					SigmaDimensions = 1
+				}
 				@MapDecalTangent,1
 				{
 					absoluteOffset = -85
 					heightMapDeformity = 200
+					position = 186100,-15810,-570000
 					radius = 1200
 					smoothHeight = 0.2
 					SigmaDimensions = 1
@@ -87,28 +95,6 @@
 		%SpaceCenter
 		{
 			repositionRadiusOffset = 42.7
-			%repositionRadiusOffsetTEMP = #$repositionRadiusOffset$
-			!repositionRadiusOffset,* = DEL
-			repositionRadiusOffset = #$repositionRadiusOffsetTEMP$
-			!repositionRadiusOffsetTEMP = DEL
-			
-			heightMapDeformity = 70
-			%heightMapDeformityTEMP = #$heightMapDeformity$
-			!heightMapDeformity,* = DEL
-			heightMapDeformity = #$heightMapDeformityTEMP$
-			!heightMapDeformityTEMP = DEL
-			
-			absoluteOffset = 0
-			%absoluteOffsetTEMP = #$absoluteOffset$
-			!absoluteOffset,* = DEL
-			absoluteOffset = #$absoluteOffsetTEMP$
-			!absoluteOffsetTEMP = DEL
-			
-			radius = 7500
-			%radiusTEMP = #$radius$
-			!radius,* = DEL
-			radius = #$radiusTEMP$
-			!radiusTEMP = DEL
 		}
 	}
 }
