--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -20,6 +20,13 @@
 		{
 			@semiMajorAxis *= #$@SigmaDimensions/Rescale$
 		}
+		@ScaledVersion
+		{
+			@Light
+			{
+				@sunAU *= #$@SigmaDimensions/Resize$
+			}
+		}
 		@Rings
 		{
 			@Ring
