--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -1,6 +1,20 @@
+// Base Settings
+
 SigmaDimensions
 {
-	Resize = 1
 	Rescale = 1
+	Resize = 1
+	Atmosphere = 1 // NOT AVAILABLE YET
 	dayLengthMultiplier = 1
+}
+
+
+
+// Advanced Settings
+
+@SigmaDimensions
+{
+	geeASLmultiplier = 1
+	rescaleSoIs = 1
+	
 }
