--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -7,9 +7,10 @@
 			@radius *= #$@SigmaDimensions/Resize$
 			@mass *= #$@SigmaDimensions/Resize$
 			@mass *= #$@SigmaDimensions/Resize$
+			@mass *= #$@SigmaDimensions/geeASLmultiplier$
 			@rotationPeriod *= #$@SigmaDimensions/dayLengthMultiplier$
 			@inverseRotThresholdAltitude *= #$@SigmaDimensions/Resize$
-			@sphereOfInfluence *= #$@SigmaDimensions/Rescale$
+			@sphereOfInfluence *= #$@SigmaDimensions/SoIsfromRadius$
 			@ScienceValues
 			{
 				@flyingAltitudeThreshold *= #$@SigmaDimensions/Resize$
