--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -15,6 +15,7 @@ SigmaDimensions
 @SigmaDimensions
 {
 	geeASLmultiplier = 1
-	rescaleSoIs = 1
-	
+	SoIsfromRadius = 0
+	orbitalPeriod = 0
+	daysVSyearRatio = 0
 }
