some fixes (see comments)
fixed landcontrol for Duna/Kerbin/Laythe
removed VertexVoronoi/displacement
added inverseRotThresholdAltitude for all bodies

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -58,6 +58,28 @@
 					vHeightMax = 3500
 					SigmaDimensions = 1
 				}
+				@LandControl:HAS[!landClasses]
+				{
+					landClasses {}
+				}
+				@LandControl
+				{
+					@landClasses:HAS[!Class[Ice?Caps]]
+					{
+						Class
+						{
+							name = Ice Caps
+						}
+					}
+					@landClasses
+					{
+						@Class[Ice?Caps]
+						{
+							alterApparentHeight = 100
+							alterRealHeight = 100
+						}
+					}
+				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
