--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -41,6 +41,40 @@
 					vHeightMax = 3500
 					SigmaDimensions = 1
 				}
+				@LandControl:HAS[!landClasses]
+				{
+					landClasses {}
+				}
+				@LandControl
+				{
+					@landClasses:HAS[!Class[DesertMountains]]
+					{
+						Class
+						{
+							name = DesertMountains
+						}
+					}
+					@landClasses:HAS[!Class[IceCaps]]
+					{
+						Class
+						{
+							name = IceCaps
+						}
+					}
+					@landClasses
+					{
+						@Class[DesertMountains]
+						{
+							alterApparentHeight = -0.8
+							alterRealHeight = 0
+						}
+						@Class[IceCaps]
+						{
+							alterApparentHeight = 100
+							alterRealHeight = 10
+						}
+					}
+				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
