--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe.cfg
@@ -22,6 +22,28 @@
 					vHeightMax = 6000
 					SigmaDimensions = 1
 				}
+				@LandControl:HAS[!landClasses]
+				{
+					landClasses {}
+				}
+				@LandControl
+				{
+					@landClasses:HAS[!Class[IceCaps]]
+					{
+						Class
+						{
+							name = IceCaps
+						}
+					}
+					@landClasses
+					{
+						@Class[IceCaps]
+						{
+							alterApparentHeight = 100
+							alterRealHeight = 10
+						}
+					}
+				}
 				%AerialPerspectiveMaterial
 				{
 					atmosphereDepth = 150000
