--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -25,6 +25,14 @@
 				@LandControl,*
 				{
 					@vHeightMax *= #$@SigmaDimensions/Resize$
+					@landClasses,*
+					{
+						@Class,*
+						{
+							@alterApparentHeight *= #$@SigmaDimensions/Resize$
+							@alterRealHeight *= #$@SigmaDimensions/Resize$
+						}
+					}
 				}
 				@AerialPerspectiveMaterial,*
 				{
@@ -91,7 +99,6 @@
 				@VertexVoronoi,*
 				{
 					@deformation *= #$@SigmaDimensions/Resize$
-					@displacement *= #$@SigmaDimensions/Resize$
 				}
 				@MapDecalTangent,*
 				{
@@ -132,7 +139,11 @@
 					!vectorX = DEL
 					!vectorY = DEL
 					!vectorZ = DEL
-				}	
+				}
+				@VertexHeightOffset
+				{
+					@offset *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
