scaled versions fades

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 25000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 95000
+			fadeEnd = 100000
+		}
 		%PQS
 		{
+			fadeStart = 100000
+			fadeEnd = 110000
+			deactivateAltitude = 115000
 			%Mods
 			{
 				%AerialPerspectiveMaterial
