--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 400000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 105000
+			fadeEnd = 110000
+		}
 		%PQS
 		{
+			fadeStart = 110000
+			fadeEnd = 115000
+			deactivateAltitude = 130000
 			%Mods
 			{
 				%VertexHeightMap
