--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 250000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 55000
+			fadeEnd = 60000
+		}
 		%PQS
 		{
+			fadeStart = 60000
+			fadeEnd = 120000
+			deactivateAltitude = 160000
 			%Mods
 			{
 				%VertexSimplexHeightAbsolute
