--- a/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Minmus.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 30000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 135000
+			fadeEnd = 140000
+		}
 		%PQS
 		{
+			fadeStart = 140000
+			fadeEnd = 145000
+			deactivateAltitude = 180000
 			%Mods
 			{
 				%AltitudeAlpha
