--- a/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 22000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 130000
+			fadeEnd = 135000
+		}
 		%PQS
 		{
+			fadeStart = 135000
+			fadeEnd = 140000
+			deactivateAltitude = 180000
 			%Mods
 			{
 				VertexSimplexHeightAbsolute {}
