--- a/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 90000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 295000
+			fadeEnd = 300000
+		}
 		%PQS
 		{
+			fadeStart = 300000
+			fadeEnd = 325000
+			deactivateAltitude = 330000
 			%Mods
 			{
 				VertexSimplexHeightAbsolute {}
