--- a/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
@@ -13,8 +13,16 @@
 				spaceAltitudeThreshold = 250000
 			}
 		}
+		%ScaledVersion
+		{
+			fadeStart = 95000
+			fadeEnd = 100000
+		}
 		%PQS
 		{
+			fadeStart = 100000
+			fadeEnd = 125000
+			deactivateAltitude = 330000
 			%Mods
 			{
 				%VertexSimplexHeightAbsolute
