--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -23,6 +23,8 @@
 		}
 		@ScaledVersion
 		{
+			@fadeStart *= #$@SigmaDimensions/Resize$
+			@fadeEnd *= #$@SigmaDimensions/Resize$
 			@Light
 			{
 				@sunAU *= #$@SigmaDimensions/Resize$
