limit KSC decal shrinkage

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -56,4 +56,26 @@
 			@radius *= #$Resize$
 		}
 	}
+	@Body[Kerbin]:HAS[~removePQSmods[*MapDecalTangent*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				@MapDecalTangent
+				{
+					%Resize = #$@SigmaDimensions/Resize$
+					@radius /= #$Resize$
+				}
+				@MapDecalTangent:HAS[#Resize[<0.75]]
+				{
+					@Resize = 0.75
+				}
+				@MapDecalTangent:HAS[#Resize[*]]
+				{
+					@radius *= #$Resize$
+				}
+			}
+		}
+	}
 }
