--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -4,9 +4,9 @@
 	{
 		@PQS
 		{
-			@fadeStart *= #$@SigmaDimensions/Resize$
-			@fadeEnd *= #$@SigmaDimensions/Resize$
-			@deactivateAltitude *= #$@SigmaDimensions/Resize$
+			@fadeStart *= #$@SigmaDimensions/fadeResize$
+			@fadeEnd *= #$@SigmaDimensions/fadeResize$
+			@deactivateAltitude *= #$@SigmaDimensions/fadeResize$
 			@Mods
 			{
 				@VertexSimplexHeightAbsolute,*
