--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -28,3 +28,11 @@
 {
 	%SoIsfromRadius = #$Rescale$
 }
+@SigmaDimensions
+{
+	%fadeResize = 1
+}
+@SigmaDimensions:HAS[#Resize[>1]]
+{
+	%fadeResize = #$Resize$
+}
