--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -23,8 +23,8 @@
 		}
 		@ScaledVersion
 		{
-			@fadeStart *= #$@SigmaDimensions/Resize$
-			@fadeEnd *= #$@SigmaDimensions/Resize$
+			@fadeStart *= #$@SigmaDimensions/fadeResize$
+			@fadeEnd *= #$@SigmaDimensions/fadeResize$
 			@Light
 			{
 				@sunAU *= #$@SigmaDimensions/Resize$
