--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -147,6 +147,10 @@
 				{
 					@offset *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightOblate
+				{
+					@height *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
