--- a/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
@@ -1,6 +1,6 @@
 @Kopernicus:FOR[SigDim]
 {
-	@Body,*
+	@Body:HAS[@Template,!Template[Sun]]
 	{
 		@Properties
 		{
@@ -31,6 +31,35 @@
 				spaceAltitudeThreshold = #$spaceAltitudeThresholdTEMP$
 				!spaceAltitudeThresholdTEMP = DEL
 			}
+		}
+		@ScaledVersion
+		{
+			%fadeStartTEMP = #$fadeStart$
+			!fadeStart,* = DEL
+			fadeStart = #$fadeStartTEMP$
+			!fadeStartTEMP = DEL
+			
+			%fadeEndTEMP = #$fadeEnd$
+			!fadeEnd,* = DEL
+			fadeEnd = #$fadeEndTEMP$
+			!fadeEndTEMP = DEL
+		}
+		@PQS
+		{
+			%fadeStartTEMP = #$fadeStart$
+			!fadeStart,* = DEL
+			fadeStart = #$fadeStartTEMP$
+			!fadeStartTEMP = DEL
+			
+			%fadeEndTEMP = #$fadeEnd$
+			!fadeEnd,* = DEL
+			fadeEnd = #$fadeEndTEMP$
+			!fadeEndTEMP = DEL
+			
+			%deactivateAltitudeTEMP = #$deactivateAltitude$
+			!deactivateAltitude,* = DEL
+			deactivateAltitude = #$deactivateAltitudeTEMP$
+			!deactivateAltitudeTEMP = DEL
 		}
 	}
 }
