--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -67,7 +67,7 @@
 					%Resize = #$@SigmaDimensions/Resize$
 					@radius /= #$Resize$
 				}
-				@MapDecalTangent:HAS[#Resize[<0.75]]
+				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.01]]
 				{
 					@Resize = 0.75
 				}
