flattenOcean and flattenMountains

--- a/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Dres.cfg
@@ -50,6 +50,11 @@
 					deformity = 400
 					SigmaDimensions = 1
 				}
+				%FlattenOcean
+				{
+					oceanRadius = 1
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
