--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eeloo.cfg
@@ -61,6 +61,11 @@
 					deformation = 250
 					displacement = 0.00499999988824129
 				}
+				%FlattenOcean
+				{
+					oceanRadius = 1
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
