--- a/GameData/Sigma/Dimensions/Configs/Bodies/Moho.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Moho.cfg
@@ -57,6 +57,11 @@
 					deformity = 200
 					SigmaDimensions = 1
 				}
+				%FlattenOcean
+				{
+					oceanRadius = 1
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
