--- a/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
@@ -59,6 +59,11 @@
 					enabled = True
 					SigmaDimensions = 1
 				}
+				%FlattenOcean
+				{
+					oceanRadius = 1
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
