--- a/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Tylo.cfg
@@ -62,6 +62,11 @@
 					heightMapDeformity = 50
 					position = 569917.4,-94669.8,181300.9
 				}
+				%FlattenOcean
+				{
+					oceanRadius = 1
+					SigmaDimensions = 1
+				}
 			}
 		}
 	}
