--- a/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removePQSMods.cfg
@@ -24,6 +24,14 @@
 				!VertexVoronoi:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!MapDecalTangent:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 				!MapDecal:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				!FlattenOcean:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+				@LandControl,*
+				{
+					@landClasses,*
+					{
+						!Class:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+					}
+				}
 			}
 		}
 	}
@@ -212,6 +220,16 @@
 			@Mods
 			{
 				!MapDecal:HAS[#SigmaDimensions[1],~userDefined[1]] {}
+			}
+		}
+	}
+	@Body:HAS[#removePQSMods[*,FlattenOcean,*]]
+	{
+		@PQS
+		{
+			@Mods
+			{
+				!FlattenOcean:HAS[#SigmaDimensions[1],~userDefined[1]] {}
 			}
 		}
 	}
