--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -143,13 +143,21 @@
 					!vectorY = DEL
 					!vectorZ = DEL
 				}
-				@VertexHeightOffset
+				@VertexHeightOffset,*
 				{
 					@offset *= #$@SigmaDimensions/Resize$
 				}
-				@VertexHeightOblate
+				@VertexHeightOblate,*
 				{
 					@height *= #$@SigmaDimensions/Resize$
+				}
+				@FlattenMountains,*
+				{
+					@altitude *= #$@SigmaDimensions/Resize$
+				}
+				@FlattenOcean,*
+				{
+					@oceanRadius *= #$@SigmaDimensions/Resize$
 				}
 			}
 		}
