--- a/GameData/Sigma/Dimensions/Configs/Bodies/allowUserDefined.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/allowUserDefined.cfg
@@ -25,6 +25,13 @@
 				@LandControl,*
 				{
 					%userDefined = 1
+					@landClasses,*
+					{
+						@Class,*
+						{
+							%userDefined = 1
+						}
+					}
 				}
 				@AerialPerspectiveMaterial,*
 				{
@@ -79,6 +86,10 @@
 					%userDefined = 1
 				}
 				@MapDecal,*
+				{
+					%userDefined = 1
+				}
+				@FlattenOcean,*
 				{
 					%userDefined = 1
 				}
