--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -159,6 +159,11 @@
 				{
 					@oceanRadius *= #$@SigmaDimensions/Resize$
 				}
+				@VertexDefineCoastLine,*
+				{
+					@depthOffset *= #$@SigmaDimensions/Resize$
+					@oceanRadiusOffset *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
