--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -164,6 +164,11 @@
 					@depthOffset *= #$@SigmaDimensions/Resize$
 					@oceanRadiusOffset *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightMapStep,*
+				{
+					@offset *= #$@SigmaDimensions/Resize$
+					@deformity *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
