--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -169,6 +169,12 @@
 					@offset *= #$@SigmaDimensions/Resize$
 					@deformity *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightNoiseHeightMap,*
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+					@heightEnd *= #$@SigmaDimensions/Resize$
+					@heightStart *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
