--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -175,6 +175,12 @@
 					@heightEnd *= #$@SigmaDimensions/Resize$
 					@heightStart *= #$@SigmaDimensions/Resize$
 				}
+				@VertexHeightNoiseVertHeightCurve,*
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+					@heightEnd *= #$@SigmaDimensions/Resize$
+					@heightStart *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
