--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -6,31 +6,31 @@
 		{
 			@pressureCurve
 			{
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma
-				key = 0 0 0 Sigma			
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0
+				key = 0 Sigma 0 0			
 			}
 			@pressureCurve
 			{
@@ -39,6 +39,8 @@
 				%temp3 = #$key,0[2, ]$
 				%temp4 = #$key,0[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,0 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,1[0, ]$
@@ -46,6 +48,8 @@
 				%temp3 = #$key,1[2, ]$
 				%temp4 = #$key,1[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,1 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,2[0, ]$
@@ -53,6 +57,8 @@
 				%temp3 = #$key,2[2, ]$
 				%temp4 = #$key,2[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,2 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,3[0, ]$
@@ -60,6 +66,8 @@
 				%temp3 = #$key,3[2, ]$
 				%temp4 = #$key,3[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,3 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,4[0, ]$
@@ -67,6 +75,8 @@
 				%temp3 = #$key,4[2, ]$
 				%temp4 = #$key,4[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,4 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,5[0, ]$
@@ -74,6 +84,8 @@
 				%temp3 = #$key,5[2, ]$
 				%temp4 = #$key,5[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,5 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,6[0, ]$
@@ -81,6 +93,8 @@
 				%temp3 = #$key,6[2, ]$
 				%temp4 = #$key,6[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,6 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,7[0, ]$
@@ -88,6 +102,8 @@
 				%temp3 = #$key,7[2, ]$
 				%temp4 = #$key,7[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,7 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,8[0, ]$
@@ -95,6 +111,8 @@
 				%temp3 = #$key,8[2, ]$
 				%temp4 = #$key,8[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,8 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,9[0, ]$
@@ -102,6 +120,8 @@
 				%temp3 = #$key,9[2, ]$
 				%temp4 = #$key,9[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,9 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,10[0, ]$
@@ -109,6 +129,8 @@
 				%temp3 = #$key,10[2, ]$
 				%temp4 = #$key,10[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,10 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,11[0, ]$
@@ -116,6 +138,8 @@
 				%temp3 = #$key,11[2, ]$
 				%temp4 = #$key,11[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,11 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,12[0, ]$
@@ -123,6 +147,8 @@
 				%temp3 = #$key,12[2, ]$
 				%temp4 = #$key,12[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,12 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,13[0, ]$
@@ -130,6 +156,8 @@
 				%temp3 = #$key,13[2, ]$
 				%temp4 = #$key,13[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,13 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,14[0, ]$
@@ -137,6 +165,8 @@
 				%temp3 = #$key,14[2, ]$
 				%temp4 = #$key,14[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,14 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,15[0, ]$
@@ -144,6 +174,8 @@
 				%temp3 = #$key,15[2, ]$
 				%temp4 = #$key,15[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,15 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,16[0, ]$
@@ -151,6 +183,8 @@
 				%temp3 = #$key,16[2, ]$
 				%temp4 = #$key,16[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,16 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,17[0, ]$
@@ -158,6 +192,8 @@
 				%temp3 = #$key,17[2, ]$
 				%temp4 = #$key,17[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,17 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,18[0, ]$
@@ -165,6 +201,8 @@
 				%temp3 = #$key,18[2, ]$
 				%temp4 = #$key,18[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,18 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,19[0, ]$
@@ -172,6 +210,8 @@
 				%temp3 = #$key,19[2, ]$
 				%temp4 = #$key,19[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,19 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,20[0, ]$
@@ -179,6 +219,8 @@
 				%temp3 = #$key,20[2, ]$
 				%temp4 = #$key,20[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,20 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,21[0, ]$
@@ -186,6 +228,8 @@
 				%temp3 = #$key,21[2, ]$
 				%temp4 = #$key,21[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,21 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,22[0, ]$
@@ -193,6 +237,8 @@
 				%temp3 = #$key,22[2, ]$
 				%temp4 = #$key,22[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,22 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,23[0, ]$
@@ -200,6 +246,8 @@
 				%temp3 = #$key,23[2, ]$
 				%temp4 = #$key,23[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,23 = #$temp1$ $temp2$ $temp3$ $temp4$
 
 				%temp1 = #$key,24[0, ]$
@@ -207,105 +255,107 @@
 				%temp3 = #$key,24[2, ]$
 				%temp4 = #$key,24[3, ]$
 				@temp1 *= #$@SigmaDimensions/Atmosphere$
+				@temp3 /= #$@SigmaDimensions/Atmosphere$
+				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,24 = #$temp1$ $temp2$ $temp3$ $temp4$
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
-			@pressureCurve:HAS[#key[*Sigma]]
+			@pressureCurve:HAS[#key[*Sigma*]]
 			{
 				!key,25 = DEL
 			}
