remove temp variables

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -269,6 +269,11 @@
 				@temp3 /= #$@SigmaDimensions/Atmosphere$
 				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,24 = #$temp1$ $temp2$ $temp3$ $temp4$
+				
+				!temp1 = DEL
+				!temp2 = DEL
+				!temp3 = DEL
+				!temp4 = DEL
 			}
 			@pressureCurve:HAS[#key[*Sigma*]]
 			{
@@ -627,6 +632,11 @@
 				@temp3 /= #$@SigmaDimensions/Atmosphere$
 				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,24 = #$temp1$ $temp2$ $temp3$ $temp4$
+				
+				!temp1 = DEL
+				!temp2 = DEL
+				!temp3 = DEL
+				!temp4 = DEL
 			}
 			@temperatureCurve:HAS[#key[*Sigma*]]
 			{
@@ -985,6 +995,11 @@
 				@temp3 /= #$@SigmaDimensions/Atmosphere$
 				@temp4 /= #$@SigmaDimensions/Atmosphere$
 				@key,24 = #$temp1$ $temp2$ $temp3$ $temp4$
+				
+				!temp1 = DEL
+				!temp2 = DEL
+				!temp3 = DEL
+				!temp4 = DEL
 			}
 			@temperatureSunMultCurve:HAS[#key[*Sigma*]]
 			{
