remove duplicate mass

--- a/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
@@ -4,6 +4,11 @@
 	{
 		@Properties
 		{
+			%massTEMP = #$mass$
+			!mass,* = DEL
+			mass = #$massTEMP$
+			!massTEMP = DEL
+			
 			%rotationPeriodTEMP = #$rotationPeriod$
 			!rotationPeriod,* = DEL
 			rotationPeriod = #$rotationPeriodTEMP$
