saving some space

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -11,6 +11,7 @@
 			@rotationPeriod *= #$@SigmaDimensions/dayLengthMultiplier$
 			@inverseRotThresholdAltitude *= #$@SigmaDimensions/Resize$
 			@sphereOfInfluence *= #$@SigmaDimensions/SoIsfromRadius$
+			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Resize$
 			@ScienceValues
 			{
 				@flyingAltitudeThreshold *= #$@SigmaDimensions/Resize$
