case sensitivity and rescale rings by radius or orbit

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -20,13 +20,21 @@
 	@dayLengthMultiplier *= #$daysVSyearRatio$
 	@dayLengthMultiplier /= #$Resize$
 }
-@SigmaDimensions:HAS[#SoIsfromRadius[1]]
+@SigmaDimensions:HAS[#SoIsFromRadius[1]]
 {
-	%SoIsfromRadius = #$Resize$
+	%SoIsFromRadius = #$Resize$
 }
-@SigmaDimensions:HAS[~SoIsfromRadius[1]]
+@SigmaDimensions:HAS[#SoIsFromRadius[0]]
 {
-	%SoIsfromRadius = #$Rescale$
+	%SoIsFromRadius = #$Rescale$
+}
+@SigmaDimensions:HAS[#RingsFromRadius[1]]
+{
+	%RingsFromRadius = #$Resize$
+}
+@SigmaDimensions:HAS[#RingsFromRadius[0]]
+{
+	%RingsFromRadius = #$Rescale$
 }
 @SigmaDimensions
 {
