--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -35,8 +35,8 @@
 		{
 			@Ring
 			{
-				@outerRadius *= #$@SigmaDimensions/Resize$
-				@innerRadius *= #$@SigmaDimensions/Resize$
+				@outerRadius *= #$@SigmaDimensions/RingsFromRadius$
+				@innerRadius *= #$@SigmaDimensions/RingsFromRadius$
 			}
 		}
 		@SpaceCenter
