--- a/GameData/Sigma/Dimensions/Settings.cfg
+++ b/GameData/Sigma/Dimensions/Settings.cfg
@@ -15,7 +15,8 @@ SigmaDimensions
 @SigmaDimensions
 {
 	geeASLmultiplier = 1
-	SoIsfromRadius = 0
+	SoIsFromRadius = 0
+	RingsFromRadius = 0
 	orbitalPeriod = 0
 	daysVSyearRatio = 0
 }
