--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -4,14 +4,6 @@
 	@Rescale *= #$Resize$
 	@Rescale != 0.666666666666667
 }
-@SigmaDimensions:HAS[#rescaleSoIs[1]]
-{
-	%rescaleSoIs = #$Rescale$
-}
-@SigmaDimensions:HAS[~rescaleSoIs[1]]
-{
-	%rescaleSoIs = #$Resize$
-}
 @SigmaDimensions:HAS[#daysVSyearRatio[>0]]
 {
 	%dayLengthMultiplier = #$Rescale$
@@ -28,13 +20,10 @@
 {
 	%SoIsFromRadius = #$Rescale$
 }
-@SigmaDimensions:HAS[#RingsFromRadius[1]]
-{
-	%RingsFromRadius = #$Resize$
-}
 @SigmaDimensions:HAS[#RingsFromRadius[0]]
 {
 	%RingsFromRadius = #$Rescale$
+	@RingsFromRadius /= #$Resize$
 }
 @SigmaDimensions
 {
